format code, fix some warnings